<resources>
    <string name="app_name">안심 우체국</string>
    <string name="safety_add">안부 추가</string>
    <string name="safety_name">안부 이름</string>
    <string name="safety_list">안부 목록</string>
    <string name="safety_get_ask">선택하신 안부를\n적용하시겠습니까?</string>
    <string name="safety_time">00 : 00</string>
    <string name="ward_safety">피보호자 님의 안부</string>
    <string name="safety_update">안부 수정</string>
    <string name="safety_set">안부 설정</string>
    <string name="safety_edit_hint">안부 이름을 작성해주세요</string>
    <string name="safety_management">안부 관리</string>
    <string name="question_set">질문 설정</string>
    <string name="question_add">질문 추가</string>
    <string name="question_hint">질문을 작성해주세요</string>
    <string name="question_answer">질문 답변</string>
    <string name="question_option">질문 옵션</string>
    <string name="question_content">질문 내용</string>
    <string name="question_update">질문 수정</string>
    <string name="question_management">질문 관리</string>
    <string name="monday">월</string>
    <string name="tuesday">화</string>
    <string name="wednesday">수</string>
    <string name="thursday">목</string>
    <string name="friday">금</string>
    <string name="saturday">토</string>
    <string name="sunday">일</string>
    <string name="time_set">시간 설정</string>
    <string name="save">저 장</string>
    <string name="remove">삭 제</string>
    <string name="check">확 인</string>
    <string name="register">등 록</string>
    <string name="ward_name">피보호자 이름</string>
    <string name="date">날 짜</string>
    <string name="answer_record">답변 녹음</string>
    <string name="answer_record_set">답변 녹음 설정</string>
    <string name="secret_set">비밀 설정</string>
    <string name="ward_add">피보호자 등록</string>
    <string name="guardian_register">보호자 등록</string>
    <string name="logout">로그아웃</string>
    <string name="profile_set">프로필 편집</string>
    <string name="join">회원 가입</string>
    <string name="ward">피보호자</string>
    <string name="ward_join">피보호자\n회원가입</string>
    <string name="guardian">보호자</string>
    <string name="guardian_join">보호자\n회원가입</string>
    <string name="name">이름</string>
    <string name="name_hint">이름을 입력하세요</string>
    <string name="address">주소</string>
    <string name="address_hint">주소를 입력하세요</string>
    <string name="detail_address">상세주소</string>
    <string name="detail_address_hint">상세주소를 입력하세요</string>
    <string name="birth_date">생년월일</string>
    <string name="birth_date_hint">생년월일을 입력하세요</string>
    <string name="gender">성별</string>
    <string name="male">남자</string>
    <string name="female">여자</string>
    <string name="photo">사진</string>
    <string name="age">나이</string>
    <string name="number">0</string>
    <string name="alarm_time">00 : 00</string>
    <string name="response_time">00시간 00분 00초</string>
    <string name="non_response">미응답</string>
    <string name="call">통화</string>
    <string name="telephone_verification">핸드폰 인증</string>
    <string name="verification_title">본인 확인을 위해\n전화번호 인증이 필요합니다!</string>
    <string name="verification_steal">전화번호는 절대 도용되지 않습니다.</string>
    <string name="telephone">휴대전화번호</string>
    <string name="telephone_enter">휴대전화번호 입력</string>
    <string name="verification">인증번호</string>
    <string name="verification_hint">인증번호 6자리 입력</string>
    <string name="verification_request">인증 요청</string>
    <string name="question_set_time">00:00</string>
    <string name="question_duration_time">00:00</string>
    <string name="record">녹음</string>
    <string name="update">수정</string>
    <string name="play">재생</string>
    <string name="record_reply">녹음 회신</string>
    <string name="secret">비밀 설정</string>
    <string name="safety_ending">안부가 종료되었습니다.\n\n수고하셨습니다. ^^</string>
    <string name="profile">프로필</string>
    <string name="response_today_safety">금일 안부별 응답현황</string>
    <string name="result_show">결과 보기</string>
    <string name="yes_text">예</string>
    <string name="no_text">아니오</string>
    <string name="ok">O</string>
    <string name="no">X</string>
    <string name="listen_repeat">다시 듣기</string>
    <string name="week">월 화 수 목 금 토 일</string>
    <string name="safety_date">1월 1일 월요일</string>
    <string name="stt">음성 답변 기능</string>
    <string name="voice_record">음성 녹음</string>
</resources>