<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/dialog_radius_background"
    android:layout_gravity="center"
    android:paddingHorizontal="50sp"
    android:paddingVertical="10sp"
    tools:context=".guardian.RequestDialog" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="10sp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ward_add"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/request_edit"
            android:layout_width="250sp"
            android:layout_height="40sp"
            android:hint="@string/telephone_enter"
            android:inputType="number"
            android:text=""
            android:paddingStart="10sp"
            android:layout_marginTop="30sp"
            android:maxLength="11"
            android:background="@drawable/edittext_rounded_corner_rectangle"
            android:textColorHint="#8E8D8D" />

        <ProgressBar
            android:id="@+id/request_progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:max="100"
            android:minWidth="200sp"
            android:minHeight="50sp"
            android:progress="0"
            android:visibility="invisible" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <info.hoang8f.widget.FButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/request_button"
            android:text="@string/register"
            android:textSize="20sp"
            android:fontFamily="@font/bmjua"/>

    </LinearLayout>



</LinearLayout>