<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#fffbf3"
    tools:context=".ward.AnswerActivity">

    <TextView
        android:id="@+id/ward_safety_question"
        android:layout_width="0dp"
        android:layout_height="130dp"
        android:text="@string/question_content"
        android:textSize="21.5sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:gravity="center"
        android:padding="15dp"
        android:maxLength="50"
        android:lineSpacingExtra="6sp"
        android:background="@drawable/layout_rounded_corner"
        app:layout_constraintTop_toTopOf="@id/horizontal_guideline1"
        app:layout_constraintStart_toStartOf="@id/vertical_guideline1"
        app:layout_constraintEnd_toEndOf="@id/vertical_guideline4"/>

    <info.hoang8f.widget.FButton
        android:id="@+id/ward_safety_yes"
        android:layout_width="0sp"
        android:layout_height="0sp"
        android:background="#1e90ff"
        android:text="@string/ok"
        android:textSize="150sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintTop_toBottomOf="@id/ward_safety_question"
        app:layout_constraintBottom_toTopOf="@id/ward_safety_repeat"
        app:layout_constraintStart_toStartOf="@id/vertical_guideline1"
        app:layout_constraintEnd_toEndOf="@id/vertical_guideline2" />

    <info.hoang8f.widget.FButton
        android:id="@+id/ward_safety_no"
        android:layout_width="0sp"
        android:layout_height="0sp"
        android:background="#f05056"
        android:text="@string/no"
        android:textSize="150sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintTop_toBottomOf="@id/ward_safety_question"
        app:layout_constraintBottom_toTopOf="@id/ward_safety_repeat"
        app:layout_constraintStart_toStartOf="@id/vertical_guideline3"
        app:layout_constraintEnd_toEndOf="@id/vertical_guideline4" />

    <info.hoang8f.widget.FButton
        android:id="@+id/ward_safety_repeat"
        android:layout_width="0sp"
        android:layout_height="130sp"
        android:text="@string/listen_repeat"
        android:textSize="37.5sp"
        android:textColor="@color/black"
        android:fontFamily="@font/bmjua"
        app:layout_constraintBottom_toBottomOf="@id/horizontal_guideline6"
        app:layout_constraintStart_toStartOf="@id/vertical_guideline1"
        app:layout_constraintEnd_toEndOf="@id/vertical_guideline4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal_guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.01" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal_guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.19" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal_guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal_guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.79" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal_guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.80" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal_guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.99" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.025" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.4875" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5125" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.975" />

</androidx.constraintlayout.widget.ConstraintLayout>